--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,11 +44,16 @@ $menu = wofi --show drun
 exec-once = waybar
 exec-once = swaync
 exec-once = nm-applet --indicator
+exec-once = waypaper --restore
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
+# Servisi başlat
 
+# Sistemle olan bağını kur
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
@@ -328,3 +333,10 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Gnome Calendar'ı popup (yüzen pencere) yap
+windowrulev2 = float, class:^(org.gnome.Calendar)$
+windowrulev2 = center, class:^(org.gnome.Calendar)$
+windowrulev2 = size 800 600, class:^(org.gnome.Calendar)$
+# Beyaz tasarımınla uyumlu ince beyaz kenarlık ekle
+windowrulev2 = bordercolor rgb(ffffff), class:^(org.gnome.Calendar)$
